@@ -1,7 +1,7 @@
 <?php
 
 // change the following paths if necessary
-$yiic='{YiicPath}';
+$yiic=dirname(__FILE__).'/../../framework/yiic.php';
 $config=dirname(__FILE__).'/config/console.php';
 
 require_once($yiic);
